# vega

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
legacy/src/: logoutils.c  vega
package/archlinux/: .SRCINFO  PKGBUILD
src/: main.rs
src/_utils/: cli.rs  mod.rs  read_file.rs  run_command.rs  sort_by_priority.rs  which.rs
src/data/: common.rs  data.rs  mod.rs  title.rs
src/data/hardware/: hardware.rs  individual_stats.rs  mod.rs
src/data/software/: individual_stats.rs  mod.rs  software.rs
src/logo/: logo.rs
src/utils/: cli.rs  read_file.rs  run_command.rs  sort_by_priority.rs  which.rs
static/: help.txt  licence.txt
static/c/: disk.c  gpu.c
static/logos/: alpine  apple  arch  artix  debian  endeavour  fedora  freebsd  gentoo  manjaro  mint  nixos  nobara  popos  rpi  ubuntu
static/sh/: packages.sh  packages_macos.sh
